--- a/structure.tex
+++ b/structure.tex
@@ -33,6 +33,8 @@
 
 \usepackage{multirow}
 
+\usepackage{academicons} % for google scholar
+
 %----------------------------------------------------------------------------------------
 %	DOCUMENT MARGINS
 %----------------------------------------------------------------------------------------
@@ -300,6 +302,7 @@
 \newcommand{\cvjobtitle}[1]{\renewcommand{\cvjobtitle}{#1}}
 \newcommand{\cvgithub}[1]{\renewcommand{\cvgithub}{#1}}
 \newcommand{\cvlinkedin}[1]{\renewcommand{\cvlinkedin}{#1}}
+\newcommand{\cvscholar}[1]{\renewcommand{\cvscholar}{#1}}
 
 % Command to create the rounded boxes around the first three letters of section titles
 \newcommand*\round[2]{%
