--- a/Khalil_CV.tex
+++ b/Khalil_CV.tex
@@ -151,6 +151,7 @@
 	{}{} % Description
 	\tableentry{$\bullet$}{Perform statistical analyses on IATA data involving flight schedules and passenger data.}{}
 	\tableentry{$\bullet$}{Apply community detection and graph representation learning algorithms on aviation networks.}{}
+	\tableentry{$\bullet$}{Perform GPU accelerated Monte Carlo simulation to extract statistics of aviation networks.}{}
 	\tableentry{$\bullet$}{Maintain a mySQL database for archival, and retrieval of data.}{}
 	\tableentry{$\bullet$}{Extract insights and trends from learned representations relevant to air transportation.}{spaceafter}
 	
@@ -205,6 +206,8 @@
 	\tableentry{$\bullet$}{Research change propagation and absorption in engineering design (applied to aeroengine systems).}{}
 	\tableentry{$\bullet$}{Authored a \href{https://sed-group.github.io/mvmlib/index.html}{Python library} for assessing the robustness of design solutions to changing requirements.}{}
 	\tableentry{$\bullet$}{Used said library in design space exploration to concurrently develop and analyze an aeroengine component design case and \href{https://khbalhandawi.github.io/projects/1_project/}{visualize the results} using interactive tools.}{spaceafter}
+	\tableentry{}{}{spaceafter}
+	\tableentry{}{}{spaceafter}
 
 	%------------------------------------------------
 
@@ -225,7 +228,7 @@
 	{} % Location
 	{Research Assistant, Asset Integrity Management Systems Lab} % Job title
 	{}{}  % Description
-	\tableentry{$\bullet$}{Developed fiber optic structural monitoring sensors for mitigating corrosion costs.}{}
+	\tableentry{$\bullet$}{Developed fiber optic structural monitoring sensors to mitigate corrosion cost in O\&G structures.}{}
 	\tableentry{$\bullet$}{Simulated a \href{https://khbalhandawi.github.io/projects/6_project/}{fiber optic-based corrosion sensor} using waveguide equations and models.}{}
 	\tableentry{$\bullet$}{Developed accelerated corrosion testing setups to simulate said sensor prototypes.}{}
 	%------------------------------------------------
