update CV with siemens energy position

--- a/Khalil_CV.tex
+++ b/Khalil_CV.tex
@@ -143,7 +143,20 @@
 
 	%------------------------------------------------
 
-	\workposition{May 2022 -- present} % Duration
+	\workposition{Aug 2023 -- present} % Duration
+	{} % FT/PT (full time or part time)
+	{Transformation of Industry, Siemens Energy Canada Limited} % Employer
+	{Montr\'{e}al, Canada} % Location
+	{DMADO Program Manager} % Job title
+	{}{} % Description
+	\tableentry{$\bullet$}{Manage the R\&D project: Digital Multidisciplinary Analysis and Design Optimization (DMADO).}{}
+	\tableentry{$\bullet$}{Supervise and provide technical support to DMADO interns on various research topics related to optimization, simulation, and machine learning.}{}
+	\tableentry{$\bullet$}{Consult for various teams within the company to support their digitalization efforts.}{}
+	\tableentry{$\bullet$}{Manage budget, expenses, and other administrative related aspects of the project.}{spaceafter}
+	
+	%------------------------------------------------
+
+	\workposition{May 2022 -- Jul 2023} % Duration
 	{} % FT/PT (full time or part time)
 	{Department of Computer Science and Operations Research, Universit\'{e} de Montr\'{e}al} % Employer
 	{Montr\'{e}al, Canada} % Location
@@ -194,9 +207,10 @@
 	\tableentry{$\bullet$}{Developed mathematical tools and \href{https://github.com/khbalhandawi/scale_AM_webapp}{software} for design space exploration and visualization of high-dimensional design spaces that are based on blackbox optimization.}{}
 	\tableentry{$\bullet$}{Worked on a \href{https://www.chalmers.se/en/departments/ims/news/Pages/Optimizationdriven-setbased-design-.aspx}{technology transfer} at \textbf{GKN Aerospace}, providing Python training on said tools.}{}
 	\tableentry{$\bullet$}{Resulted in the \textbf{\href{https://www.gknaerospace.com/en/our-technology/2022/additive-manufacturing-research-paper-receives-journal-of-mechanical-design-award/}{best paper}} award by the ASME Journal of Mechanical Design in 2021.}{spaceafter}
-
+	\tableentry{}{}{spaceafter}
+	
 	%------------------------------------------------
-
+	
 	\workposition{Sep 2021 -- Dec 2021} % Duration
 	{} % FT/PT (full time or part time)
 	{Systems Engineering Design Lab, Chalmers University of Technology} % Employer
@@ -206,8 +220,6 @@
 	\tableentry{$\bullet$}{Research change propagation and absorption in engineering design (applied to aeroengine systems).}{}
 	\tableentry{$\bullet$}{Authored a \href{https://sed-group.github.io/mvmlib/index.html}{Python library} for assessing the robustness of design solutions to changing requirements.}{}
 	\tableentry{$\bullet$}{Used said library in design space exploration to concurrently develop and analyze an aeroengine component design case and \href{https://khbalhandawi.github.io/projects/1_project/}{visualize the results} using interactive tools.}{spaceafter}
-	\tableentry{}{}{spaceafter}
-	\tableentry{}{}{spaceafter}
 
 	%------------------------------------------------
 
@@ -459,36 +471,36 @@
 %	PERSONAL INTERESTS
 %----------------------------------------------------------------------------------------
 
-\section{Conversation starters}
+% \section{Conversation starters}
 
-\columnratio{0.5,0.5} % The relative ratios of the three columns in the references
+% \columnratio{0.5,0.5} % The relative ratios of the three columns in the references
 
-\setlength\columnsep{0.05\textwidth} % Specify the amount of space between the columns
+% \setlength\columnsep{0.05\textwidth} % Specify the amount of space between the columns
 
-\begin{paracol}{2} % Begin the multi-column environment
+% \begin{paracol}{2} % Begin the multi-column environment
 
-	\begin{itemize}\itemsep0em 
-		\item Competitive gaming
-		% \item Powerlifting
-		\item Tabletop games
-	\end{itemize}
+% 	\begin{itemize}\itemsep0em 
+% 		\item Competitive gaming
+% 		% \item Powerlifting
+% 		\item Tabletop games
+% 	\end{itemize}
 		
-	%----------------------------------------------------------------------------------------
+% 	%----------------------------------------------------------------------------------------
 	
-	\switchcolumn % Switch to the next paracol column
+% 	\switchcolumn % Switch to the next paracol column
 	
-	%----------------------------------------------------------------------------------------
+% 	%----------------------------------------------------------------------------------------
 
-	\begin{itemize}\itemsep0em 
-		\item 3D printing hobbyist
-		% \item Car enthusiast
-		\item 3D modeling and graphic design
-	\end{itemize}
+% 	\begin{itemize}\itemsep0em 
+% 		\item 3D printing hobbyist
+% 		% \item Car enthusiast
+% 		\item 3D modeling and graphic design
+% 	\end{itemize}
 
-	%----------------------------------------------------------------------------------------
+% 	%----------------------------------------------------------------------------------------
 	
-\end{paracol}
-%------------------------------------------------
+% \end{paracol}
+% %------------------------------------------------
 
 \medskip % Extra whitespace before the next section
 
