--- a/Khalil_CV.tex
+++ b/Khalil_CV.tex
@@ -47,7 +47,7 @@
 \cvaddress{500 Avenue Des Pins Ouest, Apt 706\\ & H2W 1S7, Montr\'{e}al, Qu\'{e}bec, Canada} % Short address/location, use \newline if more than 1 line is required
 \cvnumberphone{(514) 572-7367} % Phone number
 \cvsite{khbalhandawi.github.io} % Personal website
-\cvmail{khalil.al.handawi@umontreal.ca} % Email address
+\cvmail{khalilbassaam@hotmail.com} % Email address
 \cvgithub{github.com/khbalhandawi} % GitHub
 \cvlinkedin{linkedin.com/in/khbalhandawi} % LinkedIn
 
@@ -191,7 +191,22 @@
 
 	%------------------------------------------------
 
-	\workposition{May 2022 -- present} % Duration
+	\workposition{Aug 2023 -- present} % Duration
+	{} % FT/PT (full time or part time)
+	{Transformation of Industry, Siemens Energy Canada} % Employer
+	{Montr\'{e}al, Canada} % Location
+	{R\&D project manager} % Job title
+	{}{} % Description
+	% \tableentry{$\bullet$}{Develop statistical learning tools to accelerate simulation workflows of Turbomachinery.}{}
+	% \tableentry{$\bullet$}{Develop optimization algorithms for solving engineering design problems.}{}
+	\tableentry{$\bullet$}{Design and propose future research projects with an impact on the energy industry.}{}
+	\tableentry{$\bullet$}{Manage and train university students working on various R\&D projects.}{}
+	\tableentry{$\bullet$}{Disseminate research results at prominent turbomachinery and automation conferences.}{}
+	\tableentry{$\bullet$}{Ensure a smooth and continuous technology transfer for various R\&D projects.}{spaceafter}
+
+	%------------------------------------------------
+
+	\workposition{May 2022 -- July 2023} % Duration
 	{} % FT/PT (full time or part time)
 	{Department of Computer Science and Operations Research, Universit\'{e} de Montr\'{e}al} % Employer
 	{Montr\'{e}al, Canada} % Location
@@ -278,6 +293,16 @@
 
 	%------------------------------------------------
 
+	% \workposition{Aug 2023 -- present} % Duration
+	% {} % FT/PT (full time or part time)
+	% {Transformation of Industry, Siemens Energy Canada} % Employer
+	% {Montr\'{e}al, Canada} % Location
+	% {R\&D project manager} % Job title
+	% {}{} % Description
+	% \tableentry{$\bullet$}{Ensure a smooth and continuous technology transfer for various R\&D projects.}{spaceafter}
+
+	%------------------------------------------------
+
 	\workposition{May 2022 -- present} % Duration
 	{} % FT/PT (full time or part time)
 	{International Air Transport Association (IATA)} % Employer
@@ -285,8 +310,8 @@
 	{Visiting researcher} % Job title
 	{}{}  % Description
 	\tableentry{$\bullet$}{Analyze IATA data involving \textbf{25M flight schedules} using graph representation learning.}{}
-	\tableentry{$\bullet$}{Develop community detection algorithms for graphs with over \textbf{10K nodes} and \textbf{100K edges}.}{}
-	\tableentry{$\bullet$}{Organize flight schedule data into a mySQL database for  archival, and retrieval of data.}{spaceafter}
+	\tableentry{$\bullet$}{Develop community detection algorithms for heterogeneous graphs.}{}
+	\tableentry{$\bullet$}{Organize flight schedule data into a mySQL database for archival, and retrieval of data.}{spaceafter}
 
 	%------------------------------------------------
 
@@ -328,6 +353,16 @@
 %------------------------------------------------
 
 \begin{supertabular}{>{\raggedleft\arraybackslash}p{0.19\linewidth}p{0.77\linewidth}} % Start a table with three columns, the table will ensure everything is aligned
+
+	%------------------------------------------------
+
+	% \workposition{Aug 2023 -- present} % Duration
+	% {} % FT/PT (full time or part time)
+	% {Transformation of Industry, Siemens Energy Canada} % Employer
+	% {Montr\'{e}al, Canada} % Location
+	% {R\&D project manager} % Job title
+	% {}{} % Description
+	% \tableentry{$\bullet$}{Manage and train university students working on various R\&D projects.}{}
 
 	%------------------------------------------------
 
@@ -476,6 +511,32 @@
 %------------------------------------------------
 
 \begin{supertabular}{>{\raggedleft\arraybackslash}p{0.19\linewidth}p{0.58\linewidth}>{\raggedleft\arraybackslash}p{0.17\linewidth}} % Start a table with three columns, the table will ensure everything is aligned
+
+	\tableentrythree{Aug 2023 -- present}{{\textbf{Digital multidisciplinary analysis and design optimization, Siemens Energy}}}{Montr\'{e}al, Canada}{spaceafter}
+	\tableentry{$\bullet$}{Student name: Abdessamad Idoumghar (Masters student)}{} % Description
+	\tableentry{}{Affiliation: ETS}{}
+	\tableentry{}{Domain: Nonlinear programming, least squares}{spaceafter}
+	\tableentry{$\bullet$}{Student name: Aravind Kumar Parthasarathy (Masters student)}{} % Description
+	\tableentry{}{Affiliation: McGill University}{}
+	\tableentry{}{Domain: Solid mechanics, topology optimization}{spaceafter}
+	\tableentry{$\bullet$}{Student name: Vraj Patel (Masters student)}{} % Description
+	\tableentry{}{Affiliation: McGill University}{}
+	\tableentry{}{Domain: Combinotorial optimization, process engineering}{spaceafter}
+	\tableentry{$\bullet$}{Student name: Anas Haitof (Masters student)}{} % Description
+	\tableentry{}{Affiliation: ETS}{}
+	\tableentry{}{Domain: CFD, surge identification, and algorithm design}{spaceafter}
+	\tableentry{$\bullet$}{Student name: Axel Koubemba (Masters student)}{} % Description
+	\tableentry{}{Affiliation: ETS}{}
+	\tableentry{}{Domain: Multidisciplinary and Derivative-free optimization}{spaceafter}
+	\tableentry{$\bullet$}{Student name: Mathieu Salz (Bachelors student)}{} % Description
+	\tableentry{}{Affiliation: McGill University}{}
+	\tableentry{}{Domain: Physics informed neural networks, Aerodynamics}{spaceafter}
+	\tableentry{$\bullet$}{Student name: Dan Mihail Bala (Bachelors student)}{} % Description
+	\tableentry{}{Affiliation: ETS}{}
+	\tableentry{}{Domain: Derivative-free optimization}{spaceafter}
+	\tableentry{$\bullet$}{Student name: Fozail Ahmad (PhD student)}{} % Description
+	\tableentry{}{Affiliation: McGill University}{}
+	\tableentry{}{Domain: Cloud computing and software design}{spaceafter}
 
 	%------------------------------------------------
 
@@ -648,14 +709,14 @@
 %\longformpublication{Reference (format this manually as desired)}
 
 %------------------------------------------------
-\textbf{\large Submitted articles}\medskip \hrule \medskip
-
-\longformpublication{\textbf{K. Al Handawi}, A. Brahma, D. Wynn, M. Kokkolaras and O. Isaksson (2023). Design space exploration and evaluation using margin-based trade-offs. \textit{Journal of Mechanical Design}\\
-\textit{funded partially by NSERC and Area of Advance of Chalmers University}}
-
-%------------------------------------------------
 
 \textbf{\large Refereed Journal Articles}\medskip \hrule \medskip
+
+\longformpublication{\textbf{K. Al Handawi}, A. Brahma, D. Wynn, M. Kokkolaras and O. Isaksson (2023). Design space exploration and evaluation using margin-based trade-offs. \textit{Journal of Mechanical Design}, \textit{in press}, \href{https://doi.org/10.1115/1.4051607}{doi: 10.1115/1.4051607}\\
+\textit{funded partially by NSERC and Area of Advance of Chalmers University}}
+
+\longformpublication{\textbf{K. Al Handawi}, A. Brahma, D. Wynn, M. Kokkolaras and O. Isaksson (2023). Design space exploration and evaluation using margin-based trade-offs. \textit{Journal of Mechanical Design}, \textit{144}(1): pp 012001. \href{https://doi.org/10.1115/1.4051607}{doi: 10.1115/1.4051607}\\
+\textit{funded partially by NSERC, FRQNT, CARIC and EU Horizon 2020 research and innovation programme}}
 
 \longformpublication{A. Khalil, \textbf{K. Al Handawi}, Z. Mohsen, A. Abdel Nour, R. Feghali, I. Chamseddine and M. Kokkolaras (2022). Weekly nowcasting of new COVID-19 cases using past viral load measurements. \textit{Viruses}, \textit{14}(7): pp 1414. \href{https://www.mdpi.com/1999-4915/14/7/1414}{doi: 10.3390/V14071414}}
 
@@ -668,7 +729,6 @@
 \longformpublication{M. Chehadeh, M. Wahbah, M. Awad, O. AbdulHay, \textbf{K. Al Handawi}, L. Seneviratne, I. Greatbatch and Y. Zweiri (2021). Novel aerial firefighting system for suppression of incipient cladding fires. \textit{Journal of Field Robotics}, \textit{1}: pp 203 -- 230. \href{https://doi.org/10.55417/fr.2021008}{https://doi.org/10.55417/fr.2021008}\\
 \textit{funded by Emaar Properties PJSC}}
 
-
 \longformpublication{\textbf{K. Al Handawi}, P. Andersson, M. Panarotto, O. Isaksson and M. Kokkolaras (2020). Scalable set-based design optimization and remanufacturing for meeting changing requirements. \textit{Journal of Mechanical Design}, \textit{143}(2): pp 021702. \href{http://dx.doi.org/10.1115/1.4047908}{doi: 10.1115/1.4047908}\\
 \textit{funded partially by NSERC, FRQNT, CARIC and EU Horizon 2020 research and innovation programme}}
 
@@ -680,6 +740,13 @@
 
 \longformpublication{\textbf{K. Al Handawi}, N. Vahdati, P. Rostron, L. Lawand and O. Shiryayev (2016). Strain-based FBG sensor for real-time corrosion rate monitoring in pre-stressed structures. \textit{Sensors and Actuators B: Chemical}, \textit{236}: pp 276 -- 285. \href{http://dx.doi.org/10.1016/j.snb.2016.05.167}{doi: 10.1016/j.snb.2016.05.167}\\
 \textit{funded by Abu Dhabi National Oil Company}}
+
+%------------------------------------------------
+\textbf{\large Submitted conference papers}\medskip \hrule \medskip
+
+\longformpublication{M. Sage, \textbf{K. Al Handawi}, Y. F. Zhao (2024). Economic Dispatch of Hybrid Renewable Energy Systems with Battery Energy Storage and Gas Turbines using Deep Reinforcement Learning \textit{IISE Annual Conference and Expo}}
+
+\longformpublication{Can Unlusoy, M. Salz, B. Maier, \textbf{K. Al Handawi}, M. V. Tittu, R. Srinivasan, M. Kokkolaras (2024). Advancing Airfoil Design: A Generative AI and PINNs Approach \textit{ASME 2024 Turbomachinery Technical Conference \& Exposition}}
 
 %------------------------------------------------
 
@@ -698,7 +765,6 @@
 \longformpublication{L. Lawand, O. Shiryayev, \textbf{K. Al Handawi}, N. Vahdati and P. Rostron (2016). Corrosivity monitoring system using RFID-based sensors. \textit{in Proceedings of SPIE Smart Structures/NDE, International Society for Optics and Photonics, Sensors and Smart Structures Technologies for Civil, Mechanical, and Aerospace Systems}, Las Vegas, USA, SPIE2016. \href{http://dx.doi.org/10.1117/12.2218813}{doi: 10.1117/12.2218813}}
 
 %------------------------------------------------
-\newpage
 \textbf{\large Poster presentations}\medskip \hrule \medskip
 
 \longformpublication{\textbf{K. Al Handawi}, P. Andersson, O. Isaksson and M. Kokkolaras (2019). Scalable set-based design solutions for product remanufacturing. \textit{International Conference on Engineering Design}, Delft, Netherlands, ICED19.}
@@ -765,7 +831,7 @@
 
 	\tableentryraw{Team leader of the first team to successfully qualify and complete the Baja SAE competition}{\textsc{Khalifa University, Abu Dhabi, UAE}}{spaceafter}
 
-	\tableentryraw{Awarded \textbf{2nd place} in the Abu Dhabi Solar Challenge (10,000 AED)}{\textsc{Khalifa University, Abu Dhabi, UAE}}{spaceafter}
+	\tableentryraw{Awarded \textbf{2nd place} in the Abu Dhabi Solar Challenge (10,000 AED)}{\textsc{Khalifa University, Abu Dhabi, UAE}}{}
 
 	\tableentryraw{Recognition for voluntary commitment to the Graduate School's and the Graduate Student Affair's events}{\textsc{Khalifa University, Abu Dhabi, UAE}}{spaceafter}
 
@@ -863,7 +929,7 @@
 %----------------------------------------------------------------------------------------
 %	REVIEW SERVICE
 %----------------------------------------------------------------------------------------
-
+\newpage
 \section{Review service}
 
 %------------------------------------------------
