Update CV for adjunct position

--- a/Khalil_CV.tex
+++ b/Khalil_CV.tex
@@ -195,18 +195,18 @@
 	{} % FT/PT (full time or part time)
 	{Transformation of Industry, Siemens Energy Canada} % Employer
 	{Montr\'{e}al, Canada} % Location
-	{R\&D project manager} % Job title
+	{R\&D project manager / Optimization Specialist} % Job title
 	{}{} % Description
 	% \tableentry{$\bullet$}{Develop statistical learning tools to accelerate simulation workflows of Turbomachinery.}{}
 	% \tableentry{$\bullet$}{Develop optimization algorithms for solving engineering design problems.}{}
-	\tableentry{$\bullet$}{Design and propose future research projects with an impact on the energy industry.}{}
+	\tableentry{$\bullet$}{Design and propose future research projects pertinent to the energy industry.}{}
 	\tableentry{$\bullet$}{Manage and train university students working on various R\&D projects.}{}
 	\tableentry{$\bullet$}{Disseminate research results at prominent turbomachinery and automation conferences.}{}
-	\tableentry{$\bullet$}{Ensure a smooth and continuous technology transfer for various R\&D projects.}{spaceafter}
+	\tableentry{$\bullet$}{Ensure a smooth and continuous industrial technology transfer for various R\&D projects.}{spaceafter}
 
 	%------------------------------------------------
 
-	\workposition{May 2022 -- July 2023} % Duration
+	\workposition{May 2022 -- Jul 2023} % Duration
 	{} % FT/PT (full time or part time)
 	{Department of Computer Science and Operations Research, Universit\'{e} de Montr\'{e}al} % Employer
 	{Montr\'{e}al, Canada} % Location
@@ -229,8 +229,6 @@
 	\tableentry{$\bullet$}{Applied state-of-the-art stochastic black-box optimization algorithms to tune machine learning hyperparameters and model selection.}{}
 	\tableentry{$\bullet$}{Develop GPU accelerated \href{https://github.com/khbalhandawi/COVID_SIM_GPU}{epidemic models} for high simulation throughput to assist in policy-making during pandemics through the use of stochastic optimization.}{}
 	\tableentry{$\bullet$}{Invited to speak at the \href{https://meetings.informs.org/wordpress/healthcare2023/}{INFORMS Healthcare conference 2023} in Toronto.}{spaceafter}
-	\tableentry{}{}{}
-	\tableentry{}{}{}
 	
 	%------------------------------------------------
 
@@ -312,7 +310,10 @@
 	\tableentry{$\bullet$}{Analyze IATA data involving \textbf{25M flight schedules} using graph representation learning.}{}
 	\tableentry{$\bullet$}{Develop community detection algorithms for heterogeneous graphs.}{}
 	\tableentry{$\bullet$}{Organize flight schedule data into a mySQL database for archival, and retrieval of data.}{spaceafter}
-
+	\tableentry{}{}{}
+	\tableentry{}{}{}
+	\tableentry{}{}{}
+	
 	%------------------------------------------------
 
 	\workposition{Jun 2017 -- Jan 2020} % Duration
@@ -514,7 +515,7 @@
 
 	\tableentrythree{Aug 2023 -- present}{{\textbf{Digital multidisciplinary analysis and design optimization, Siemens Energy}}}{Montr\'{e}al, Canada}{spaceafter}
 	\tableentry{$\bullet$}{Student name: Abdessamad Idoumghar (Masters student)}{} % Description
-	\tableentry{}{Affiliation: ETS}{}
+	\tableentry{}{Affiliation: \'{E}cole de technologie sup\'{e}rieure}{}
 	\tableentry{}{Domain: Nonlinear programming, least squares}{spaceafter}
 	\tableentry{$\bullet$}{Student name: Aravind Kumar Parthasarathy (Masters student)}{} % Description
 	\tableentry{}{Affiliation: McGill University}{}
@@ -523,16 +524,16 @@
 	\tableentry{}{Affiliation: McGill University}{}
 	\tableentry{}{Domain: Combinotorial optimization, process engineering}{spaceafter}
 	\tableentry{$\bullet$}{Student name: Anas Haitof (Masters student)}{} % Description
-	\tableentry{}{Affiliation: ETS}{}
+	\tableentry{}{Affiliation: \'{E}cole de technologie sup\'{e}rieure}{}
 	\tableentry{}{Domain: CFD, surge identification, and algorithm design}{spaceafter}
 	\tableentry{$\bullet$}{Student name: Axel Koubemba (Masters student)}{} % Description
-	\tableentry{}{Affiliation: ETS}{}
+	\tableentry{}{Affiliation: \'{E}cole de technologie sup\'{e}rieure}{}
 	\tableentry{}{Domain: Multidisciplinary and Derivative-free optimization}{spaceafter}
 	\tableentry{$\bullet$}{Student name: Mathieu Salz (Bachelors student)}{} % Description
 	\tableentry{}{Affiliation: McGill University}{}
 	\tableentry{}{Domain: Physics informed neural networks, Aerodynamics}{spaceafter}
 	\tableentry{$\bullet$}{Student name: Dan Mihail Bala (Bachelors student)}{} % Description
-	\tableentry{}{Affiliation: ETS}{}
+	\tableentry{}{Affiliation: \'{E}cole de technologie sup\'{e}rieure}{}
 	\tableentry{}{Domain: Derivative-free optimization}{spaceafter}
 	\tableentry{$\bullet$}{Student name: Fozail Ahmad (PhD student)}{} % Description
 	\tableentry{}{Affiliation: McGill University}{}
@@ -765,6 +766,7 @@
 \longformpublication{L. Lawand, O. Shiryayev, \textbf{K. Al Handawi}, N. Vahdati and P. Rostron (2016). Corrosivity monitoring system using RFID-based sensors. \textit{in Proceedings of SPIE Smart Structures/NDE, International Society for Optics and Photonics, Sensors and Smart Structures Technologies for Civil, Mechanical, and Aerospace Systems}, Las Vegas, USA, SPIE2016. \href{http://dx.doi.org/10.1117/12.2218813}{doi: 10.1117/12.2218813}}
 
 %------------------------------------------------
+\newpage
 \textbf{\large Poster presentations}\medskip \hrule \medskip
 
 \longformpublication{\textbf{K. Al Handawi}, P. Andersson, O. Isaksson and M. Kokkolaras (2019). Scalable set-based design solutions for product remanufacturing. \textit{International Conference on Engineering Design}, Delft, Netherlands, ICED19.}
